@@ -3,18 +3,63 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <artifactId>AsteroidsFX</artifactId>
-    <groupId>dk.sdu.cbse</groupId>
-    <version>1.0-SNAPSHOT</version>
+    <groupId>dk.sdu.mmmi.cbse</groupId>
+    <version>1.0.1-SNAPSHOT</version>
   </parent>
-  <groupId>dk.sdu.cbse</groupId>
+  <groupId>dk.sdu.mmmi.cbse</groupId>
   <artifactId>Core</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
   <name>Core</name>
   <dependencies>
-      <dependency>
-          <groupId>org.openjfx</groupId>
-          <artifactId>javafx-controls</artifactId>
-      </dependency>
+    <dependency>
+      <groupId>org.openjfx</groupId>
+      <artifactId>javafx-controls</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>dk.sdu.mmmi.cbse</groupId>
+      <artifactId>Common</artifactId>
+      <version>1.0.1-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>dk.sdu.mmmi.cbse</groupId>
+      <artifactId>CommonBullet</artifactId>
+      <version>1.0.1-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+    <groupId>org.springframework</groupId>
+    <artifactId>spring-context</artifactId>
+    <version>6.2.6</version>
+    </dependency>
+    <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-core</artifactId>
+        <version>6.2.6</version>
+    </dependency>
+    <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-beans</artifactId>
+        <version>6.2.6</version>
+    </dependency>
   </dependencies>
+  <build>
+      <plugins>
+          <plugin>
+              <groupId>org.codehaus.mojo</groupId>
+              <artifactId>exec-maven-plugin</artifactId>
+              <version>3.5.0</version>
+              <configuration>
+                  <executable>java</executable>
+                  <arguments>
+                      <argument>--module-path</argument>
+                      <argument>${project.basedir}/../mods-mvn:/home/togby/.m2/repository/org/openjfx/javafx-graphics/21:/home/togby/.m2/repository/org/openjfx/javafx-controls/21:/home/togby/.m2/repository/org/openjfx/javafx-base/21</argument>
+                      <argument>--add-modules</argument>
+                      <argument>ALL-MODULE-PATH</argument>
+                      <argument>-m</argument>
+                      <argument>Core/dk.sdu.cbse.Main</argument>
+                  </arguments>
+              </configuration>
+          </plugin>
+      </plugins>
+  </build>
 </project>
